--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
   - "3.6"
 
 install:
-  - pip install -r requirements_tests.txt
+  - pip install -r tests/requirements.txt
   - pip install coverage coveralls
 
 script:
